WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288036
NEW TEST(
289843@main
): [macOS iOS Debug]: ASSERTION FAILED: frame->presentationTime() >= m_lastMuxedSampleStartTime
https://bugs.webkit.org/show_bug.cgi?id=288036
Summary
NEW TEST(289843@main): [macOS iOS Debug]: ASSERTION FAILED: frame->presentati...
Marta Darbinyan
Reported
2025-02-19 18:04:03 PST
There is assertion failure in http/wpt/mediarecorder/MediaRecorder-matroska-AV-audio-video-dataavailable.html that causing the test to crash. The test is also false-positive in EWS. The test was added in
289843@main
and it has been having assertion since then. stderr: ASSERTION FAILED: frame->presentationTime() >= m_lastMuxedSampleStartTime /Volumes/Data/worker/macOS-Sequoia-Debug-Build-EWS/build/Source/WebCore/platform/mediarecorder/MediaRecorderPrivateEncoder.cpp(853) : void WebCore::MediaRecorderPrivateEncoder::interleaveAndEnqueueNextFrame() 1 0x3066dc7ec WebCore::MediaRecorderPrivateEncoder::interleaveAndEnqueueNextFrame() 2 0x3066dc430 WebCore::MediaRecorderPrivateEncoder::partiallyFlushEncodedQueues() 3 0x3066dbd54 WebCore::MediaRecorderPrivateEncoder::enqueueCompressedVideoFrame(WebCore::VideoEncoder::EncodedFrame&&) 4 0x3067061ac _ZZZN7WebCore27MediaRecorderPrivateEncoder16appendVideoFrameEN3WTF9MediaTimeEONS1_3RefINS_10VideoFrameENS1_12RawPtrTraitsIS4_EENS1_21DefaultRefDerefTraitsIS4_EEEEENK3$_2clINS_12VideoEncoder12EncodedFrameEEEDaOT_ENUlvE_clEv 5 0x3067060c8 _ZN3WTF6Detail15CallableWrapperIZZN7WebCore27MediaRecorderPrivateEncoder16appendVideoFrameENS_9MediaTimeEONS_3RefINS2_10VideoFrameENS_12RawPtrTraitsIS6_EENS_21DefaultRefDerefTraitsIS6_EEEEENK3$_2clINS2_12VideoEncoder12EncodedFrameEEEDaOT_EUlvE_vJEE4callEv 6 0x12c130fec WTF::Function<void ()>::operator()() const 7 0x12c2f71d0 WTF::(anonymous namespace)::DispatchWorkItem::operator()() 8 0x12c2f61a0 void WTF::dispatchWorkItem<WTF::(anonymous namespace)::DispatchWorkItem>(void*) 9 0x186c055b4 _dispatch_client_callout 10 0x186c0cbd8 _dispatch_lane_serial_drain 11 0x186c0d730 _dispatch_lane_invoke 12 0x186c189a0 _dispatch_root_queue_drain_deferred_wlh 13 0x186c181ec _dispatch_workloop_worker_thread 14 0x186db43d8 _pthread_wqthread 15 0x186db30f0 start_wqthread com.apple.WebKit.WebContent.Development terminated (pid 29564) for reason: crash LEAK: 2 WebPageProxy Test link:
https://ews-build.s3-us-west-2.amazonaws.com/macOS-Sequoia-Debug-WK2-Tests-EWS/ad2a90e5-13097-rerun/results.html
History:
https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fmediarecorder%2FMediaRecorder-matroska-AV-audio-video-dataavailable.html&flavor=wk2&style=debug&recent=false
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-19 18:04:36 PST
<
rdar://problem/145182916
>
EWS
Comment 2
2025-02-19 18:29:20 PST
Test gardening commit
290676@main
(141a002a1aa6): <
https://commits.webkit.org/290676@main
> Reviewed commits have been landed. Closing PR #40931 and removing active labels.
EWS
Comment 3
2025-02-20 16:53:23 PST
Test gardening commit
290759@main
(e9a1e3cbc830): <
https://commits.webkit.org/290759@main
> Reviewed commits have been landed. Closing PR #41023 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 4
2026-02-26 15:16:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59538
EWS
Comment 5
2026-02-27 10:19:25 PST
Committed
308349@main
(aaf48ddc8e5c): <
https://commits.webkit.org/308349@main
> Reviewed commits have been landed. Closing PR #59538 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug